<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/navigation_data_personal"
        android:icon="@drawable/ic_person"
        android:title="@string/bottomNavigation_data_personal" />

    <item
        android:id="@+id/navigation_more_information"
        android:icon="@drawable/ic_group"
        android:title="@string/bottomNavigation_more_information" />

    <item
        android:id="@+id/navigation_address"
        android:icon="@drawable/ic_perm_contact_calendar"
        android:title="@string/bottomNavigation_address" />

    <item
        android:id="@+id/navigation_contacts"
        android:icon="@drawable/ic_mail_outline"
        android:title="@string/bottomNavigation_contacts" />

</menu>