<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/imageButtonChangePasswordBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/white"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewChangePasswordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/screen_change_password"
            android:textSize="@dimen/size_text_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButtonChangePasswordBack" />

        <TextView
            android:id="@+id/textViewChangePasswordTitleInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/screen_password_info"
            android:textColor="@color/color_text_color_info"
            android:textSize="@dimen/size_text_title_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textViewChangePasswordTitle"
            app:layout_constraintTop_toBottomOf="@+id/textViewChangePasswordTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutChangePassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/textViewChangePasswordTitleInfo"
            app:layout_constraintStart_toStartOf="@+id/textViewChangePasswordTitleInfo"
            app:layout_constraintTop_toBottomOf="@+id/textViewChangePasswordTitleInfo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/text_new_password"
                android:inputType="textPassword"
                android:lines="1"
                android:textColor="@color/colorTextInputEditText"
                android:textSize="@dimen/size_text_input_edit_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutChangePasswordConfirmation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayoutChangePassword"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutChangePassword"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutChangePassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextChangePasswordConfirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/text_new_password_confirm"
                android:inputType="textPassword"
                android:lines="1"
                android:textColor="@color/colorTextInputEditText"
                android:textSize="@dimen/size_text_input_edit_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonChangePasswordSend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/hint_button_change"
            android:textColor="@color/color_botton_text_color"
            android:textSize="@dimen/size_text_button"
            android:textAllCaps="false"
            android:fontFamily="@font/nunito_bold"
            android:background="@drawable/rounded_botton_border"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayoutChangePasswordConfirmation"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutChangePasswordConfirmation"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutChangePasswordConfirmation" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>