<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/imageButtonForgotPasswordBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/white"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewForgotPasswordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/screen_forgot_password"
            android:textSize="@dimen/size_text_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButtonForgotPasswordBack" />

        <TextView
            android:id="@+id/textViewForgotPasswordTitleInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/screen_forgot_password_info"
            android:textSize="@dimen/size_text_title_info"
            android:textColor="@color/color_text_color_info"
            app:layout_constraintStart_toStartOf="@+id/textViewForgotPasswordTitle"
            app:layout_constraintTop_toBottomOf="@+id/textViewForgotPasswordTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutForgotPasswordEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textViewForgotPasswordTitleInfo"
            app:layout_constraintTop_toBottomOf="@+id/textViewForgotPasswordTitleInfo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextForgotPasswordEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/screen_login_hint_cpf_email"
                android:inputType="textNoSuggestions"
                android:lines="1"
                android:textColor="@color/colorTextInputEditText"
                android:textSize="@dimen/size_text_input_edit_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonForgotPasswordSend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/hint_button_send"
            android:textColor="@color/color_botton_text_color"
            android:textSize="@dimen/size_text_button"
            android:textAllCaps="false"
            android:fontFamily="@font/nunito_bold"
            android:background="@drawable/rounded_botton_border"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayoutForgotPasswordEmail"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutForgotPasswordEmail"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutForgotPasswordEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>